--- a/head/en-header.html
+++ b/head/en-header.html
@@ -1,7 +1,7 @@
-<div class="nav-maindiv-title">
+<div class="nav-maindiv-title" id="nav">
   <div class="nav-logo">
     <a href="https://alexporf.chiploop.net/">
-      <img class="nav-logo" src="/images/logo.png"/>
+      <img class="nav-logo" src="https://alexporf.chiploop.net/images/logo.png" />
     </a>
   </div>
   <ul class="nav-main-ul">
@@ -20,6 +20,17 @@
           <li><a href="2023-c.html">Pottery</a></li>
           <li><a href="2023-de.html">AP physics 2</a></li>
           <li><a href="2023-f.html">Chemistry</a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-dropdown" style="max-width: calc(30vmin);">
+      <a href="#">UMN Biorenewable Resources</a>
+      <div class="nav-dropdown-items" style="max-width: calc(30vmin);">
+        <ul>
+          <li><a href="2024-a.html" style="max-width: calc(30vmin);">climate change</a></li>
+          <li><a href="2024-b.html" style="max-width: calc(30vmin);">feedstocks sources</a></li>
+          <li><a href="2024-c.html" style="max-width: calc(30vmin);">wood resources</a></li>
+          <li><a href="2024-d.html" style="max-width: calc(30vmin);">Bioproducts</a></li>
         </ul>
       </div>
     </li>
