--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <div id="header"></div>
       <div class="main">
         <div>
-          <h1 class="main-text">Xinwen Alex Yao's portfolio</h1>
+          <h1 class="main-text" style="margin-top: 70px;">Xinwen Alex Yao's portfolio</h1>
         </div>
+        <!-- 
         <div class="main-block" style="margin-top: 4%">
           <span>
             <a href="cl100.html">
@@ -39,6 +40,7 @@
             </div>
           </a>
         </div>
+        -->
       </div>
       <div id="footer"></div>
     </div>
