--- a/2023-c.html
+++ b/2023-c.html
@@ -5,7 +5,27 @@
     <title>2023 Pottery</title>
     <link type="text/css" rel="stylesheet" href="/css/nav.css" />
     <link type="text/css" rel="stylesheet" href="/css/base.css" />
+    <link type="text/css" rel="stylesheet" href="/css/pottery.css" />
+    <script>
+      MathJax = {
+        tex: {
+          inlineMath: [
+            ["$", "$"],
+            ["\\(", "\\)"],
+          ],
+        },
+        svg: {
+          fontCache: "global",
+        },
+      };
+    </script>
     <script src="/js/jquery-3.6.0.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
     <link
       rel="shortcut icon"
       href="/images/chiploop tech-logo512.png"
@@ -28,221 +48,148 @@
           size="3"
         />
         <div style="width: 80%; margin-left: 10%; text-align: left">
-          <div class="mid-sub-block-img">
-            <img
-              style="width: 100%"
-              src="images/2023-c-1.jpg"
-              alt="X"
-            />
-          </div>
-          <div class="mid-sub-text">
-            <p>Key Spec:</p>
-            <ol style="padding-left: 17px">
-              <li>
-                ESP32S3 and STM32F446RET6 Double controller<br />
-                ESP32S3 up till 240Mhz double core<br />
-                STM32F466RET6 up till 180Mhz
-              </li>
-              <li>Max of 16MBytes SPI flash and 8MBytes SPI RAM for ESP32S3</li>
-              <li>
-                512 Kbytes of Flash memory, 128 Kbytes of SRAM and Max of
-                4GBytes SD card for STM32F466RET6
-              </li>
-              <li>Two 16 GPIOs GPIO expender, total up till 103 GPIOs</li>
-              <li>Wi-Fi and BLE support</li>
-              <li>5~30V power input, Max of 3A 3.3V power output</li>
-              <li>Low quiescent current</li>
-              <li>Easy config Easy sign</li>
-            </ol>
-          </div>
-          <br />
-          <div style="display: inline-block; width: 40%; vertical-align: top">
-            <table width="100%" style="display: table">
-              <tr>
-                <th class="intro-th">Micro Controller</th>
-              </tr>
-              <tr>
-                <td>ESP32-S3-WROOM-1U (ESP32S3N16R8)</td>
-              </tr>
-              <tr>
-                <td>STM32F466RET6</td>
-              </tr>
-              <tr>
-                <th class="intro-th">Storage</th>
-              </tr>
-              <tr>
-                <td>16 MiByte SPI Flash From ESP32</td>
-              </tr>
-              <tr>
-                <td>384 KiByte ROM From ESP32</td>
-              </tr>
-              <tr>
-                <td>512 KiByte Flash From STM32</td>
-              </tr>
-              <tr>
-                <td>1 Micro SD Card Port From STM32</td>
-              </tr>
-              <tr>
-                <th class="intro-th">Memory</th>
-              </tr>
-              <tr>
-                <td>8 MiByte SPI RAM From ESP32</td>
-              </tr>
-              <tr>
-                <td>512 KiByte SRAM From ESP32</td>
-              </tr>
-              <tr>
-                <td>128 KiByte SRAM From ESP32</td>
-              </tr>
-              <tr>
-                <th class="intro-th">DC-DC</th>
-              </tr>
-              <tr>
-                <td>TPS62933DRLR</td>
-              </tr>
-              <tr>
-                <td>3.8-30V Input</td>
-              </tr>
-              <tr>
-                <td>3A Max 3.3V Output</td>
-              </tr>
-              <tr>
-                <td>12μA Static Current</td>
-              </tr>
-              <tr>
-                <td>98% Max Duty Ratio</td>
-              </tr>
-              <tr>
-                <th class="intro-th">IO Expender</th>
-              </tr>
-              <tr>
-                <td>2 AW9523B</td>
-              </tr>
-              <tr>
-                <td>256 Steps Light Control</td>
-              </tr>
-              <tr>
-                <td>400KHz I2C Bus</td>
-              </tr>
-              <tr>
-                <td>±4000V ESD Protection</td>
-              </tr>
-              <tr>
-                <td>16 GPIOs Per AW9523B Total of 16 GPIOs</td>
-              </tr>
-            </table>
-          </div>
-          <div style="display: inline-block; width: 55%; margin-left: 4%">
-            <div style="text-align: center">
-              <a
-                href="downloads/ProProject_esp32s3+stm32f4.zip"
-                style="margin-top: 0px"
-                ><img
-                  title="EasyEDA File"
-                  alt="X"
-                  src="https://easyeda.com/images/easyeda-thumbnail.png?id=d5ed1fe5930602975df1"
-                  width="50px"
-                  height="50px"
-                  style="border-radius: 20%"
-              /></a>
-              <a href="https://oshwhub.com/alexyao/cl100-ESP32-STM32"
-                ><img
-                  title="OSHWHUB"
-                  alt="X"
-                  src="https://image.lceda.cn/avatars/2019/11/0zsOhwIvCZ6Op6u52BDXAjrEeaMJ8FxvFLsdwdb8.jpeg"
-                  width="50px"
-                  height="50px"
-                  style="border-radius: 20%"
-                  onerror="onerror=null;src='/images/0zsOhwIvCZ6Op6u52BDXAjrEeaMJ8FxvFLsdwdb8.jpeg'"
-              /></a>
-              <a href="downloads/1acf8fd9-ff13-43b8-810e-de6fb52d85e6.pdf"
-                ><img
-                  title="Scheme File"
-                  alt="X"
-                  src="/images/icon_eeschema.ico"
-                  width="50px"
-              /></a>
-              <a href="downloads/Gerber_PCB2_2023-05-30.zip"
-                ><img
-                  title="Gerber File"
-                  alt="X"
-                  src="images/icon_gerbview.ico"
-                  width="50px"
-                  height="50px"
-              /></a>
-              <a href="downloads/BOM_Board1_PCB2_2023-05-30.xlsx"
-                ><img
-                  title="BOM File"
-                  alt="X"
-                  src="/images/file_bom.svg"
-                  width="50px"
-                  height="50px"
-              /></a>
+          <div style="display: grid; text-align: center">
+            <div style="display: flex; justify-content: center">
+              <div class="notecard">
+                <div class="notecard-front">
+                  <div>
+                    <img
+                      style="width: 100%"
+                      src="images/2023-c-1.jpg"
+                      alt="X"
+                    />
+                  </div>
+                </div>
+                <div class="notecard-back">
+                  <div></div>
+                </div>
+              </div>
+              <div class="notecard">
+                <div class="notecard-front">
+                  <div>
+                    <img
+                      style="
+                        max-width: 100%;
+                        max-height: 100%;
+                        object-fit: contain;
+                      "
+                      src="images/2023-c-2.jpg"
+                      alt="X"
+                    />
+                  </div>
+                </div>
+                <div class="notecard-back">
+                  <div>$mattle black + pewter$</div>
+                </div>
+              </div>
+              <div class="notecard">
+                <div class="notecard-front">
+                  <div>
+                    <img
+                      style="
+                        max-width: 100%;
+                        max-height: 100%;
+                        object-fit: contain;
+                      "
+                      src="images/2023-c-3.jpg"
+                      alt="X"
+                    />
+                  </div>
+                </div>
+                <div class="notecard-back">
+                  <div>$glossy white + stromy blue$</div>
+                </div>
+              </div>
             </div>
-            <table width="100%" style="display: table">
-              <tr>
-                <th class="intro-th">Connector</th>
-              </tr>
-              <tr>
-                <td>
-                  1 USB Type-C Connector with CH340K USB to TTL UART Bridge
-                </td>
-              </tr>
-              <tr>
-                <td>1 DC Input Port</td>
-              </tr>
-              <tr>
-                <td>1 5.08mm Power Input Port</td>
-              </tr>
-              <tr>
-                <td>2 5.08mm Power Output Port</td>
-              </tr>
-              <tr>
-                <td>1 Micro SD Card Connector</td>
-              </tr>
-              <tr>
-                <th class="intro-th">GPIOs For ESP32</th>
-              </tr>
-              <tr>
-                <td>45 GPIOs with IOmux</td>
-              </tr>
-              <tr>
-                <th class="intro-th">GPIOs For STM32</th>
-              </tr>
-              <tr>
-                <td>50 GPIOs</td>
-              </tr>
-              <tr>
-                <td>4 SPI</td>
-              </tr>
-              <tr>
-                <td>3 I2S</td>
-              </tr>
-              <tr>
-                <td>4 I2C</td>
-              </tr>
-              <tr>
-                <td>4 USART</td>
-              </tr>
-              <tr>
-                <td>2 UART</td>
-              </tr>
-              <tr>
-                <td>USB OTG Full Speed</td>
-              </tr>
-              <tr>
-                <td>USB OTG High Speed</td>
-              </tr>
-              <tr>
-                <td>2 CAN</td>
-              </tr>
-              <tr>
-                <td>SDIO</td>
-              </tr>
-              <tr>
-                <td>Quad SPI</td>
-              </tr>
-            </table>
+            <div style="display: flex; justify-content: center">
+              <div class="notecard">
+                <div class="notecard-front">
+                  <div>
+                    <div>
+                      <img
+                        style="
+                          max-width: 100%;
+                          max-height: 100%;
+                          object-fit: contain;
+                        "
+                        src="images/2023-c-4.jpg"
+                        alt="X"
+                      />
+                      <img
+                        style="
+                          max-width: 100%;
+                          max-height: 100%;
+                          object-fit: contain;
+                        "
+                        src="images/2023-c-5.jpg"
+                        alt="X"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="notecard-back">
+                  <div></div>
+                </div>
+              </div>
+              <div class="notecard">
+                <div class="notecard-front">
+                  <div>
+                    <div>
+                      <img
+                        style="
+                          max-width: 100%;
+                          max-height: 100%;
+                          object-fit: contain;
+                        "
+                        src="images/2023-c-6.jpg"
+                        alt="X"
+                      />
+                      <img
+                        style="
+                          max-width: 100%;
+                          max-height: 100%;
+                          object-fit: contain;
+                        "
+                        src="images/2023-c-7.jpg"
+                        alt="X"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="notecard-back">
+                  <div>$stormy blue$</div>
+                </div>
+              </div>
+              <div class="notecard">
+                <div class="notecard-front">
+                  <div>
+                    <div>
+                      <img
+                        style="
+                          max-width: 100%;
+                          max-height: 100%;
+                          object-fit: contain;
+                        "
+                        src="images/2023-c-8.jpg"
+                        alt="X"
+                      />
+                      <img
+                        style="
+                          max-width: 100%;
+                          max-height: 100%;
+                          object-fit: contain;
+                        "
+                        src="images/2023-c-9.jpg"
+                        alt="X"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="notecard-back">
+                  <div>$grape$</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div id="footer"></div>
